--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lesson8</title>
 </head>
 <body>
-    <script src="src/app.ts"></script>
+    <script src="app.js"></script>
 </body>
 </html>
